opengles2/es2tri: add precision qualifier to the fragment shader

The missing qualifier causes failure during the compilation stage.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=73631
Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Reviewed-by: Tapani Pälli <tapani.palli@intel.com>
Reviewed-by: Brian Paul <brianp@vmware.com>